# free_energy_landscape

./: README.md  boltzmann_distribution.md  comparative_analysis.md  freeEnergyLandscape.py  pyproject.toml  requirements.txt
free_energy_landscape/: freeEnergyLandscape.py
inputs/: proj1Out.txt  proj2Out.txt
outputs/: discrete_values_energy_frames.tsv
