[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free_energy_landscape"
version = "0.0.4"
description = "The Free Energy Landscape Analysis tool provides a full suite for analyzing and visualizing free energy landscapes from molecular dynamics simulations. It focuses on deriving key insights from collective variable (CV) data, helping researchers deeply understand molecular systems' energetics and dynamics."
readme = "README.md"
authors = [{ name = "Leon Sulfierry", email = "sulfierry@gmail.com" }]
license = {text = "LGPL-3.0-only"}
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Environment :: GPU",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["Free energy landscape", "Molecular Dynamics", "Collective variables", "Boltzmann equation"]
dependencies = [
    "numpy>=1.23.5, <2.0.0",
    "imageio>=2.34.0, <3.0.0",
    "matplotlib>=3.7.4, <4.0.0",
    "scipy==1.10.1, <2.0.0",
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["free_energy_landscape"]

[project.urls]
Repository =  "https://github.com/sulfierry/free_energy_landscape/"


[project.scripts]
free_energy_landscape = "free_energy_landscape.freeEnergyLandscape:main"